--- a/.gitignore
+++ b/.gitignore
@@ -17,5 +17,10 @@
 # Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
 .glide/
 
+# IDE files
+.history/
+.vscode/
+.idea/
+
 # Dependency directories (remove the comment below to include it)
-# vendor/
+vendor/
